# domain_controller_orin_x2_tc397

./: LICENSE  README.md
axi_canfd_microblaze/: bsp_canfd.c  bsp_canfd.h  can.h  main.c
ch343_can/: Readme.md
ch343_can/chcan/: CMakeLists.txt  main.cpp
ch343_can/chvxcan/: CMakeLists.txt  bak.cpp  main.cpp  vxcan.sh
fpga_artix7_boot_app/: README.md  ba_vivado.tcl  design_1_wrapper.xsa  uptool.py
fpga_artix7_boot_app/app/: bsp_gpio.c  bsp_gpio.h  bsp_timer.c  bsp_uart.c  lscript.ld  main.c
fpga_artix7_boot_app/boot/: bsp_cpu.c  bsp_cpu.h  bsp_crc.c  bsp_crc.h  bsp_spi.c  bsp_spi.h  bsp_spi_flash.c  bsp_spi_flash.h  bsp_timer.h  bsp_uart.h  bsp_uart_boot.c  bsp_uart_boot.h  lscript.ld  main.c
tc397_min_project/: .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  tasking_tricore.cmake  win.ps1
